fixed collapsing behavior for 'Test this endpoint' and line through style applies only to deprecated property name

--- a/src/main/html/css/api-explorer.css
+++ b/src/main/html/css/api-explorer.css
@@ -533,7 +533,9 @@
 
 .swagger-section .operations .model-signature .description .deprecated {
     color: lightgray;
-    text-decoration: line-through
+}
+.swagger-section .operations .model-signature .description .propName.deprecated {
+    text-decoration: line-through;
 }
 
 @media (min-width: 992px) {
